--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a{
 }
 
 
+
 /* HEADER */
 
 header{
@@ -48,9 +49,70 @@ header .nav-header .category *{
 }
 
 
+/* MAIN */
+
+main .my-row{
+    margin: 40px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+main .my-row .my-col{
+    width: calc((95% - 20px) / 3);
+    position: relative;
+}
+
+
+main .my-row .my-col .special{
+    margin: 0 20px;
+}
+
+
+main .my-row .my-col img{
+    width: 100%;
+    display: block;
+}
+
+main .my-row .my-col .discount{
+    font-size: 15px;
+    color: white;
+    background-color: red;
+    padding: 5px;
+    position: absolute;
+    bottom: 100px;
+    left: 0;
+}
+
+main .my-row .my-col .heart{
+    background-color: white;
+    font-size: 2em;
+    padding: 5px 10px;
+    position: absolute;
+    right: 0;
+    top: 10px;
+}
+
+main .my-row .my-col .first-price{
+    color: red;
+    font-weight: bold;
+}
+
+main .my-row .my-col .second-price{
+    text-decoration: line-through;
+}
+
+
+
+
 
 /* DEBUG */
 
-header .nav-header {
+.debug header .nav-header {
+    border:  3px dashed black;
+}
+
+
+.debug .my-row .my-col{
     border:  3px dashed black;
 }
