--- a/css/style.css
+++ b/css/style.css
@@ -52,20 +52,16 @@ header .nav-header .category *{
 /* MAIN */
 
 main .my-row{
-    margin: 40px 0;
+    margin: 50px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
 main .my-row .my-col{
-    width: calc((95% - 20px) / 3);
+    width: calc(95%  / 3);
+    margin-bottom: 50px;
     position: relative;
-}
-
-
-main .my-row .my-col .special{
-    margin: 0 20px;
 }
 
 
@@ -74,15 +70,26 @@ main .my-row .my-col img{
     display: block;
 }
 
-main .my-row .my-col .discount{
-    font-size: 15px;
+main .my-row .my-col .tag{
+    font-size: 10px;
+    font-weight: bold;
     color: white;
-    background-color: red;
-    padding: 5px;
     position: absolute;
     bottom: 100px;
     left: 0;
 }
+
+main .my-row .my-col .discount{
+    background-color: red;
+    padding: 5px;
+}
+
+
+main .my-row .my-col .eco{
+    background-color: green;
+    padding: 5px;
+}
+
 
 main .my-row .my-col .heart{
     background-color: white;
@@ -101,6 +108,9 @@ main .my-row .my-col .first-price{
 main .my-row .my-col .second-price{
     text-decoration: line-through;
 }
+
+
+
 
 
 
