--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 
 a{
     text-decoration: none;
+    color: white;
 }
 
 
@@ -44,7 +45,6 @@ header .nav-header{
 }
 
 header .nav-header .category *{
-    color: white;
     margin-right: 10px;
 }
 
@@ -110,10 +110,28 @@ main .my-row .my-col .second-price{
 }
 
 
+/* FOOTER */
+
+footer{
+    background-color:#1A1A1A;
+    color: white;
+    padding: 40px;
+}
+
+footer .nav-footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .nav-footer .nav-footer-left > h4{
+    margin-bottom: 10px;
+}
 
 
-
-
+footer .nav-footer .nav-footer-left .info-footer *{
+    margin-right: 10px;
+}
 
 
 /* DEBUG */
@@ -125,4 +143,8 @@ main .my-row .my-col .second-price{
 
 .debug .my-row .my-col{
     border:  3px dashed black;
+}
+
+.debug footer .nav-footer{
+    border:  3px dashed red;
 }
